--- a/maze.css
+++ b/maze.css
@@ -64,9 +64,43 @@ h1 {
   border-radius: 10px;
   font-weight: bold;
   cursor: pointer;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 10;
 }
 
 canvas {
   border-radius: 10px;
+}
+
+#scoreBox {
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #ffffff;
+  color: #333;
+  padding: 10px 15px;
+  border-radius: 15px;
+  border: 3px solid #cc6699;
+  font-weight: bold;
+  font-family: "Arial", sans-serif;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+
+#regenBtn {
+  position: absolute;
+  top: 60px; /* just below the score box */
+  left: calc(50% + 260px); /* adjust based on canvas center + half width */
+  transform: translateX(-50%);
+  padding: 10px 15px;
+  background-color: #cc6699;
+  border: 1px solid #cc6699;
+  border-radius: 8px;
+  cursor: pointer;
+  z-index: 10;
+  margin-left: 220px;
+  color: #ffffff;
+  font-size: 17px;
 }
